# ptp

./: .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.local  LICENSE  README.md  docker-compose.yml  pyproject.toml  res  serverless.yml
.github/workflows/: deploy.yml
src/: handler.py
src/app/: main.py  models.py  utils.py
